@@ -1,3 +1,8 @@
+2009-07-18  Eric Botcazou  <ebotcazou@adacore.com>
+
+	PR rtl-optimization/40710
+	* resource.c (mark_target_live_regs): Reset DF problem to LR.
+
 2009-07-14  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline
